# napi-rs

./: Cargo.toml  package.json
crates/backend/src/: ast.rs
crates/backend/src/codegen/: struct.rs
crates/macro/src/parser/: attrs.rs  mod.rs
crates/napi/src/bindgen_runtime/: mod.rs
crates/napi/src/bindgen_runtime/js_values/: either.rs  object.rs
examples/bench-codegen/: .gitignore  Cargo.toml  README.md  bench.mjs  package.json
examples/bench-codegen/src/: lib.rs
examples/napi/tests/: macro_tests.rs
examples/napi/tests/build_error_tests/: mod.rs  object_codegen_invalid.rs  object_codegen_invalid.stderr
examples/napi/tests/pass_tests/: object_codegen.rs
