[package]
edition = "2021"
name = "napi-bench-codegen"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { path = "../../crates/napi", default-features = false, features = [
  "napi10",
  "experimental",
  "node_version_detect",
] }
napi-derive = { path = "../../crates/macro" }

[build-dependencies]
napi-build = { path = "../../crates/build" }
